Fixed ADA contrast issue.

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -360,7 +360,7 @@ footer.footer {
   text-align: left;
   margin-top: 1.5rem;
 
-  background-color: #F6F7F8;
+  /* background-color: #F6F7F8; */
   color: #282828;
 }
 
